# desktop_lyric

./: Cargo.toml  README.md  config.yaml
.VSCodeCounter/2024-09-22_22-12-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: rust.yml
assets/: client.json
src/: config.rs  fetch.rs  font.rs  fuo.rs  lyric.rs  main.rs  serve.rs  spotify.rs  utils.rs
src/ui/: lyric.rs  mod.rs  run.rs  settings.rs
