[package]
name = "desktop_lyric"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Desktop lyric application for linux"
readme = "README.md"
homepage = "https://github.com/Moeweb647252/desktop_lyric"
repository = "https://github.com/Moeweb647252/desktop_lyric"

[dependencies]
amll-lyric = "0.1.1"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
eframe = { version = "0.28.1", features = ["default"] }
env_logger = "0.11.5"
font-loader = "0.11.0"
log = "0.4.22"
mpris = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
simsearch = "0.2.5"
ureq = "2.10.1"

[profile.release]
strip = true
split-debuginfo = "off"
lto = "thin"
panic = "abort"
codegen-units = 1
opt-level = "s"
